--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col">
     <!-- Search Compoennt -->
-    <shared-search-box (onValue)="searchByCapital($event)" placeholder="Buscar por capital..."></shared-search-box>
+    <shared-search-box (onDebounce)="searchByCapital($event)" placeholder="Buscar por capital..."></shared-search-box>
   </div>
 </div>
 
@@ -18,3 +18,5 @@
     </ul>
   </div>
 </div>
+
+<shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
